# oniria-svn

trunk/libs/libocrypt/: .svnignore  Makefile.am  autogen.sh  configure.ac  doxygen.cfg  doxygen.cfg.in  libocrypt-config.in  libocrypt.m4  libocrypt.pc.in  libocrypt.pro
trunk/libs/libocrypt/src/: .svnignore  Makefile.am  cptBase16.cc  cptBase16.h  cptBase64.cc  cptBase64.h  cptHMAC.cc  cptHMAC.h  cptHash.cc  cptHash.h  cptMD5.cc  cptMD5.h  crypt.cc  dll.h  ocrypt.h  ocrypt_config.h  ocrypt_config.h.in  ocrypt_dll.h
trunk/libs/libocrypt/src/tests/: .svnignore  Makefile.am  hmac-md5.cc
trunk/libs/libogur/: .svnignore  Makefile.am  NEWS  README  configure.ac  doxygen.cfg  libogur-config.in  libogur.m4  libogur.pc.in  libogur.pro  win32-install.sh
trunk/libs/libogur/designer/: gtreelistplugin.cc  gtreelistplugin.h  gtreelistplugin.pro
trunk/libs/libogur/src/: .svnignore  Makefile.am  TreeList.cc  TreeList.h  TreeListItem.cc  TreeListItem.h  dll.h  gAction.cc  gAction.h  gCore.cc  gCore.h  gItemCanvas.cc  gItemCanvas.h  gItemCol.cc  gItemCol.h  gItemLine.cc  gItemLine.h  gTreeList.cc  gTreeList.h  gTreeListItem.cc  gTreeListItem.h  gTreeListItemMoveAction.cc  gTreeListItemMoveAction.h  gaction.h  gcore.cc  gcore.h  gitemcanvas.cc  gitemcanvas.h  gitemcol.cc  gitemcol.h  gitemline.cc  gitemline.h  gtreelist.cc  gtreelist.h  gtreelistitem.cc  gtreelistitem.h  gtreelistitemcanvas.cc  gtreelistitemcanvas.h  gtreelistitemcol.cc  gtreelistitemcol.h  (+11 more)
trunk/libs/libogur/test/: treelist.cc  treelist.h  treelist.pro
trunk/libs/liboim/: .svnignore  Makefile.am  configure.ac  liboim-config.in  liboim.m4  liboim.pc.in  liboim.pro  win32-install.sh
trunk/libs/liboim/src/: .svnignore  Makefile.am  imMessage.cc  imMessage.h  imMessageQueue.cc  imMessageQueue.h  imMessageThread.cc  imMessageThread.h  imMessageThreadUI.cc  imMessageThreadUI.h  imPeer.cc  imPeer.h  imProtocol.cc  imProtocol.h  imRoster.cc  imRoster.h  imRosterEntry.cc  imRosterEntry.h  imRosterGroup.cc  imRosterGroup.h  imRosterItem.cc  imRosterItem.h  imSession.cc  imSession.h  imStatus.cc  imStatus.h  oim.h  oim_config.h.in  oim_dll.h
trunk/libs/libonir/: .svnignore  AUTHORS  Makefile.am  configure.ac  libonir-config.in  libonir.m4  libonir.pc.in  libonir.pro  win32-install.sh
trunk/libs/libonir/docs/: events.txt  footer.html
trunk/libs/libonir/src/: .svnignore  Makefile.am  dll.h  oConfig.cc  oConfig.h  oEvent.cc  oEvent.h  oEventForwarder.cc  oEventForwarder.h  oEventHandler.cc  oEventHandler.h  oEventQueue.cc  oEventQueue.h  oEventTarget.cc  oEventTarget.h  oObject.cc  oObject.h  oOniria.cc  oOniria.h  oPlugin.cc  oPlugin.h  oResources.cc  oResources.h  oTabs.cc  oTabs.h  onir.cc  onir.h  onir_config.h  onir_config.h.in  onir_dll.h  plugin.h
trunk/libs/libonir/src/crypt/: cptHMAC.cc  cptHMAC.h  cptHash.cc  cptHash.h  cptMD5.cc  cptMD5.h  crypt.cc
trunk/libs/libonir/src/decoders/: decoderBase.cc  decoderBase.h  decoderGIF.cc  decoderGIF.h
trunk/libs/libonir/src/gui/: guiAnimate.cc  guiAnimate.h  guiButton.cc  guiButton.h  guiPopupWindow.cc  guiPopupWindow.h
trunk/libs/libonir/src/im/: im.cc  imMessage.cc  imMessage.h  imMessageQueue.cc  imMessageQueue.h  imMessageThread.cc  imMessageThread.h  imMessageThreadUI.cc  imMessageThreadUI.h  imPeer.cc  imPeer.h  imProtocol.cc  imProtocol.h  imRoster.cc  imRoster.h  imRosterEntry.cc  imRosterEntry.h  imRosterGroup.cc  imRosterGroup.h  imRosterItem.cc  imSession.cc  (+4 more)
trunk/libs/libosasl/: .svnignore  Makefile.am  configure.ac  libosasl-config.in  libosasl.m4  libosasl.pc.in  libosasl.pro
trunk/libs/libosasl/src/: .svnignore  Makefile.am  dll.h  osasl.h  osasl_config.h.in  saslCallback.cc  saslCallback.h  saslDIGESTMD5.cc  saslDIGESTMD5.h  saslMechanism.cc  saslMechanism.h  saslSASL.cc  saslSASL.h
trunk/libs/liboxml/: .svnignore  AUTHORS  Makefile.am  NEWS  README  configure.ac  liboxml-config.in  liboxml.m4  liboxml.pc.in  liboxml.pro  win32-install.sh
trunk/libs/liboxml/scripts/: .svnignore
trunk/libs/liboxml/src/: .svnignore  Makefile.am  dll.h  oxml.h  oxml_config.h  oxml_config.h.in  oxml_dll.h  xml.cc  xmlAttribute.cc  xmlAttribute.h  xmlElement.cc  xmlElement.h  xmlParser.cc  xmlParser.h  xmlStanza.cc  xmlStanza.h  xmlStream.cc  xmlStream.h
trunk/oniria/: .svnignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.ac  doxygen.cfg  oniria-config.in  oniria.m4  oniria.pro  win32-install.sh
trunk/oniria/docs/: file_template  footer.html
trunk/oniria/scripts/: .svnignore
trunk/oniria/src/: .svnignore  Makefile.am  gAdvStatus.cc  gAdvStatus.h  gApp.cc  gApp.h  gBottomBar.cc  gBottomBar.h  gChat.cc  gChat.h  gConfigure.cc  gConfigure.h  gDockBarBase.cc  gDockBarBase.h  gFrame.cc  gFrame.h  gMain.cc  gMain.h  gRoster.cc  gRoster.h  gTabFrame.cc  gTabFrame.h  gTopBar.cc  gTopBar.h  oApp.cc  oApp.h  oApplication.cc  oApplication.h  oEventManager.cc  oEventManager.h  oMainWindow.cc  oMainWindow.h  oOniriaImpl.cc  oOniriaImpl.h  oPluginManager.cc  oPluginManager.h  oResourceManager.cc  oResourceManager.h  oSessionManager.cc  oSessionManager.h  (+12 more)
trunk/oniria/src/data/: Makefile
trunk/oniria/src/guictrls/: ctrlRosterTree.cc  ctrlRosterTree.h  ctrlStatusText.cc  ctrlStatusText.h
trunk/oniria/src/tests/: .svnignore  Makefile.am
trunk/oniria/src/win32/: config.h  oniria.exe.Manifest  oniria_config.h
trunk/oniria/src/xrc/: oniria.xrc
trunk/plugins/empty/: .svnignore  Makefile.am  autogen.sh  configure.ac  win32-install.sh
trunk/plugins/empty/docs/: footer.html
trunk/plugins/empty/scripts/: .svnignore
trunk/plugins/empty/src/: Makefile.am  ePlugin.cc  ePlugin.h  empty.cc
trunk/plugins/jabber/: .svnignore  AUTHORS  INSTALL  NEWS  README  autogen.sh  configure.ac  doxygen.cfg  win32-install.sh
trunk/plugins/jabber/docs/: .svnignore
trunk/plugins/jabber/src/: .svnignore  Makefile.am  jJid.cc  jJid.h  jMessageQueue.cc  jMessageQueue.h  jPeer.cc  jPeer.h  jPlugin.cc  jPlugin.h  jProtocol.cc  jProtocol.h  jRoster.cc  jRoster.h  jRosterItem.cc  jRosterItem.h  jRosterSubItem.cc  jRosterSubItem.h  jSession.cc  jSession.h  jabber.cc
(+66 files in other folders)
